<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#410FA3"
        android:orientation="vertical"
        android:paddingStart="24dp"

        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_avatar"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_margin="8dp"
            android:src="@color/white"
            android:scaleType="centerCrop"
            android:contentDescription=""/>

        <TextView
            android:id="@+id/profiletv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_profile"
            android:textColor="@color/white"
            android:fontFamily="@font/fredoka_medium"
            android:textSize="22sp"
            android:textFontWeight="500"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:padding="24dp">
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:layout_weight="1"
    >
    <Button
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#5C6BC0"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/switch_theme"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"

        android:textSize="20sp" />

    <Button
        android:id="@+id/change_language"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#5C6BC0"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/change_mother_language"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"

        android:textSize="20sp" />

    <Button
        android:id="@+id/change_image"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#5C6BC0"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/change_your_image"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"

        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Logout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#E5E5E5"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/logout"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>


</LinearLayout>
</ScrollView>
