<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#410FA3"
            android:paddingStart="24dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#410FA3"
                    android:src="@drawable/baseline_arrow_back_ios_24" />

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/fredoka_medium"
                    android:gravity="start"
                    android:paddingRight="64dp"
                    android:text="@string/listening"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"

        android:orientation="vertical"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:fontFamily="@font/fredoka_bold"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:layout_marginTop="34dp"
        android:text="gardener"/>

    <TextView
        android:id="@+id/trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:fontFamily="@font/fredoka_regular"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:text="[ 'gɑ:dnə ]"/>

        <TextView
            android:id="@+id/textpress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/fredoka_medium"
            android:gravity="start"
            android:text="@string/please_press_button_and_say_this_n_word_our_service_will_check_n_your_pronunciation"
            android:textColor="@color/text_color"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/third_after"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView
            android:id="@+id/microtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_result"
            android:fontFamily="@font/fredoka_regular"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="24dp"
            android:textColor="@color/text_color"
            />

        <EditText
            android:id="@+id/animalText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:layout_marginHorizontal="24dp"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:lines="1"
            android:backgroundTint="#080E1E0D"
            android:background="@drawable/rounded_button"/>
        </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/check_speech_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button_correct_all"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/check_my_speech"
        android:gravity="center"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginHorizontal="24dp"

        android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_button_correct_all"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/yay_go_next"
            android:gravity="center"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginHorizontal="24dp"

            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:backgroundTint="@color/colorPrimary"

        android:layout_height="0dp">
    <ImageButton
        android:id="@+id/micro"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectang"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:layout_marginHorizontal="24dp"
        android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>